commit to add features

--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,7 @@
   <!--script src="//cdn.rawgit.com/cornflourblue/angular-registration-login-example/master/app.js"></script-->
   <script src="app-services/authentication.service.js"></script>
   <script src="app-services/flash.service.js"></script>
+  <script src="app-services/image.widget.js"></script>
 
   <!-- Real user service that uses an api -->
   <!-- <script src="app-services/user.service.js"></script> -->
